Fix contrast in `blockquote`

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -38,7 +38,6 @@
 
 .Home blockquote {
   font-style: italic;
-  color: var(--gray-light);
 }
 
 pre.-copy {
